--- a/example_react/package.json
+++ b/example_react/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "vuera_ts_lib": "link:.."
   },
   "scripts": {
     "start": "react-scripts start",
