--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "outDir": "lib/esm",
-    "module": "esnext",
-    "target": "es5",
+    "module": "ESNext",
+    "target": "ESNext",
     "lib": [
       "es6",
       "dom",
       "es2016",
       "es2017"
     ],
-    "jsx": "react",
+    "jsx": "react-jsx",
+    "jsxFactory": "",
+    "jsxFragmentFactory": "",
     "declaration": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
@@ -23,6 +24,7 @@
     "allowSyntheticDefaultImports": true
   },
   "include": [
+    "node_modules/microbundle/index.d.ts",
     "src"
   ],
   "exclude": [
