--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "node_modules/microbundle/index.d.ts",
