--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/parser": "^5.12.0",
     "microbundle": "^0.14.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
