--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,37 @@
 {
   "compilerOptions": {
+    "outDir": "dist",
     "module": "ESNext",
     "target": "ESNext",
     "lib": [
-      "es6",
       "dom",
       "es2016",
       "es2017"
     ],
-    "jsx": "react-jsx",
-    "jsxFactory": "",
-    "jsxFragmentFactory": "",
-    "declaration": true,
     "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "sourceMap": true,
+    "declaration": true,
     "esModuleInterop": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
+    // "allowJs": true,
+    // "skipLibCheck": true,
+    // "strict": true,
+    // "forceConsistentCasingInFileNames": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "resolveJsonModule": true,
+    // "isolatedModules": true,
+    // "noEmit": true,
+    //
+    "jsx": "react-jsx",
+    "jsxFactory": "",
+    "jsxFragmentFactory": "",
   },
   "include": [
     "node_modules/microbundle/index.d.ts",
