--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /example/node_modules
 /example/build
+/example/dist
 
 /example_react/node_modules
 /example_react/build
+/example_react/dist
 
 node_modules
 yarn-error.log
