--- a/example/package.json
+++ b/example/package.json
@@ -1,39 +1,61 @@
 {
-  "name": "example",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue-2-webpack-4-boilerplate",
+  "version": "1.0.0",
+  "description": "Vue 2 application with webpack 4 boilerplate",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
+    "staging": "cross-env NODE_ENV=staging webpack",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "@babel/polyfill": "~7.2",
+    "@types/react": "^17.0.39",
+    "react": "^17.0.2",
+    "vue": "~2.6",
     "vue-property-decorator": "^9.1.2",
-    "vuera_ts_lib": "link:.."
+    "vue-router": "~3.0",
+    "vuera_ts_lib": ".."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-react-app": "^10.0.1",
-    "eslint": "^7",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/core": "~7.2",
+    "@babel/plugin-proposal-class-properties": "~7.3",
+    "@babel/plugin-proposal-decorators": "~7.3",
+    "@babel/plugin-proposal-json-strings": "~7.2",
+    "@babel/plugin-syntax-dynamic-import": "~7.2",
+    "@babel/plugin-syntax-import-meta": "~7.2",
+    "@babel/preset-env": "~7.3",
+    "babel-eslint": "~10.0",
+    "babel-loader": "^8.2.3",
+    "compression-webpack-plugin": "~2.0",
+    "cross-env": "~5.2",
+    "css-loader": "~2.1",
+    "eslint": "~5.16",
+    "eslint-config-standard": "~10.2",
+    "eslint-friendly-formatter": "~3.0",
+    "eslint-loader": "~2.1",
+    "eslint-plugin-html": "~3.0",
+    "eslint-plugin-import": "~2.14",
+    "eslint-plugin-node": "~4.2",
+    "eslint-plugin-promise": "~3.5",
+    "eslint-plugin-standard": "~3.0",
+    "eslint-plugin-vue": "~5.1",
+    "friendly-errors-webpack-plugin": "~1.7",
+    "html-webpack-plugin": "~3.2",
+    "mini-css-extract-plugin": "~0.5",
+    "node-sass": "~4.12",
+    "optimize-css-assets-webpack-plugin": "~5.0",
+    "sass-loader": "~7.1",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.5.5",
+    "uglifyjs-webpack-plugin": "~1.2",
+    "vue-loader": "~15.6",
+    "vue-style-loader": "~4.1",
+    "vue-template-compiler": "~2.6",
+    "webpack": "~4.29",
+    "webpack-bundle-analyzer": "~3.3",
+    "webpack-cli": "~3.2",
+    "webpack-dev-server": "~3.1",
+    "webpack-hot-middleware": "~2.24",
+    "webpack-merge": "~4.2"
   }
 }
