--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "vue": "~2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "~3.0",
-    "vuera_ts_lib": "./.."
+    "vuera_ts_lib": "../vuera_ts_lib-v1.0.0-rc01.tgz"
   },
   "devDependencies": {
     "@babel/core": "~7.2",
